# ScreamAPI

./: .gitignore  CMakeLists.txt  README.adoc  README.md  README.template.md  sync.json
.github/workflows/: ci.yml
res/: README.txt  ScreamAPI.config.json  ScreamAPI.schema.json
src/: legacy_linker_exports.h  main.cpp
src/eos/: ecom_entitlements.cpp  ecom_items.cpp  init.cpp  logging.cpp  metrics.cpp  stubs.cpp
src/scream_api/: api.cpp  api.hpp  config.cpp  config.hpp  scream_api.cpp  scream_api.hpp
